welcome.lessons.welcome.array.search.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
  var longueurT=nums.length
  var max =nums(0)
  for(i<-1to longueurT){
    if(nums(i)>max)
    max=nums(i)

  }
} return max